# expo-ft

./: .gitignore  .gitmodules  LICENSE  README.md  eval_droid_policy.py  index.html  job_collect.sh  job_compare_q.sh  job_demos.sh  job_eval.sh  job_eval_base.sh  job_eval_curve.sh  job_eval_sft.sh  job_eval_sft_eef.sh  job_eval_sft_pushcube_eef.sh  job_rl.sh  job_sft.sh  job_sft_pushcube_eef.sh  job_sft_robocasa.sh  job_sft_stackcube_eef.sh  pyproject.toml  script.js  slurm-9906615.out  slurm-9915044.out  styles.css  test.py  train_pi_robo.py  train_pi_robo_async.py
client/: collect_data.py  install_pyzed.sh  pyproject.toml  run_client.py
client/envs/: droid_env.py  utils.py
client/real_utils/: detector.py  spacemouse.py  vis_utils.py
configs/model/: dagger_pi_config.py  expo_ft_old_pi_config.py  expo_ft_pi_config.py  grpo_pi_config.py  ppo_pi_config.py  sac_config.py  sac_pi_config.py
configs/task/: light2.py  maniskill_stack_cube.yaml  pick.py  real_base.py  stack_cube.yaml
configs/task/maniskill/: maniskill_stack_cube.yaml  pick_cube.yaml  pick_cube_expo_ft.yaml  pick_cube_expo_ft_old.yaml  pick_cube_grpo.yaml  pick_cube_ppo.yaml  pick_cube_sac.yaml  pick_cube_sft.yaml  push_cube.yaml  push_cube_eef.yaml  push_cube_expo_ft.yaml  push_cube_expo_ft_old.yaml  push_cube_grpo.yaml  push_cube_ppo.yaml  push_cube_sac.yaml  push_cube_sft.yaml  stack_cube.yaml  stack_cube_eef.yaml  stack_cube_expo_ft.yaml  stack_cube_expo_ft_old.yaml  stack_cube_grpo.yaml  stack_cube_ppo.yaml  stack_cube_rlinf.yaml  stack_cube_sac.yaml  stack_cube_sft.yaml
configs/task/robocasa/: close_drawer.yaml
expo_ft/agents/: __init__.py
expo_ft/agents/alg/: __init__.py  agent.py  batch_utils.py  bc.py  checkpoint_utils.py  expo_ft.py  expo_ft_old.py  grpo.py  ppo.py  sac.py
expo_ft/agents/vla/: __init__.py  pi05.py  vla_base.py
expo_ft/data/: __init__.py  batch_processor.py  dataset.py  replay_buffer.py
expo_ft/distributions/: __init__.py  bounded_log_std.py  hetstat.py  tanh_normal.py  tanh_transformed.py
expo_ft/env/: droid_utils.py  env_client.py  env_factory.py  libero_env.py  maniskill_env.py  patches.py  robocasa_env.py
expo_ft/networks/: __init__.py  categorical_value.py  encoders.py  ensemble.py  mlp.py  pixel_multiplexer.py  state_action_value.py  utils.py
expo_ft/utils/: __init__.py  augmentation.py  config_loader.py  log_utils.py  train_utils.py
scripts/: capture_camera_comparison.py  collect_action_stats.py  compare_argmax_vs_reference_q.py  convert_droid_data_to_lerobot.py  convert_maniskill_to_droid.py  convert_maniskill_to_lerobot.py  convert_pytorch_to_jax.py  convert_robocasa_to_droid.py  convert_robocasa_to_lerobot.py  diagnose_reward_timing.py  eval_base_policy.py  eval_curve.py  eval_policy.py  eval_policy_pytorch.py  replay_trajectory_patched.py  run_pipeline.py  set_server.sh  setup_env.sh  validate_demos_full_pipeline.py
scripts/pick/: calculate_norm.sh  collect_data.sh  convert_data.sh  eval_policy.sh  finetune_droid.sh  run_policy.sh  run_server.sh  run_server_async.sh
videos/visualization/.claude/: settings.local.json
