[project]
name = "expo-ft"
version = "0.1.0"
description = "EXPO-FT: Sample-Efficient Reinforcement Learning Finetuning for Vision-Language-Action Models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpi",
    "openpi-client",
    "absl-py>=2.0.0",
    "cloudpickle>=3.0.0",
    "etils[epath]>=1.5.0",
    "h5py>=3.10.0",
    "optax>=0.2.0",
    "scipy>=1.11.0",
    "tensorflow-probability>=0.23.0",
    "websockets~=13.1",  # 14+ tightened handshake strictness; pin to match client side
    "numpy>=1.26.4",
    "jax>=0.5.3",
    "flax>=0.10.2",
    "orbax-checkpoint>=0.11.13",
    "gymnasium>=0.29.1",
    "imageio[ffmpeg]>=2.37.3",
    "tqdm>=4.67.3",
    "wandb>=0.27.0",
    "pyyaml>=6.0.3",
    "matplotlib>=3.11.0",
    "augmax>=0.4.1",
    "torch>=2.7.1",
    "lerobot>=0.1.0",
    "tensorboard>=2.21.0",
    "mani-skill",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
# openpi is cloned into ./expo_ft/agents/vla/openpi (see README) and installed
# editable, so the package and its training scripts (scripts/*/finetune_droid.sh)
# always come from the same checkout — no git/package version skew.
openpi = { path = "expo_ft/agents/vla/openpi", editable = true }
openpi-client = { path = "expo_ft/agents/vla/openpi/packages/openpi-client", editable = true }
lerobot = { git = "https://github.com/huggingface/lerobot", rev = "0cf864870cf29f4738d3ade893e6fd13fbd7cdb5" }
dlimp = { git = "https://github.com/kvablack/dlimp", rev = "ad72ce3a9b414db2185bc0b38461d4101a65477a" }
mani-skill = { path = "expo_ft/third_party/ManiSkill", editable = true }


[tool.uv]
override-dependencies = ["ml-dtypes==0.4.1", "tensorstore==0.1.74", "datasets>=3.0,<4.0"]
